# DocOrient

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  contributing.md
scripts/: validate_with_dataset.py
scripts/training/: export_and_validate.py  train_orientation_cnn.py
src/docorient/: __init__.py  _imaging.py  cli.py  config.py  correction.py  exceptions.py  rotation.py  types.py  voting.py
src/docorient/batch/: __init__.py  processor.py  scanner.py  worker.py
src/docorient/detection/: __init__.py  base.py  engine.py  flip_classifier.py  primary.py  secondary.py
tests/: conftest.py  test_batch.py  test_cli.py  test_correction.py  test_detection.py
